--- a/publications.bib
+++ b/publications.bib
@@ -2,6 +2,7 @@
 @article{said_predicting_2021,
 	title = {Predicting {COVID}-19 cases using bidirectional {LSTM} on multivariate time series},
 	volume = {28},
+	abstract = {To assist policymakers in making adequate decisions to stop the spread of the {COVID}-19 pandemic, accurate forecasting of the disease propagation is of paramount importance. This paper presents a deep learning approach to forecast the cumulative number of {COVID}-19 cases using bidirectional Long Short-Term Memory (Bi-{LSTM}) network applied to multivariate time series. Unlike other forecasting techniques, our proposed approach first groups the countries having similar demographic and socioeconomic aspects and health sector indicators using K-means clustering algorithm. The cumulative case data of the clustered countries enriched with data related to the lockdown measures are fed to the bidirectional {LSTM} to train the forecasting model. We validate the effectiveness of the proposed approach by studying the disease outbreak in Qatar and the proposed model prediction from December 1st until December 31st, 2020. The quantitative evaluation shows that the proposed technique outperforms state-of-art forecasting approaches.},
 	pages = {56043--56052},
 	number = {40},
 	journaltitle = {Environmental Science and Pollution Research},
@@ -10,8 +11,8 @@
 	note = {Publisher: Springer},
 }
 
-@article{alhaddad_sense_2022,
-	title = {Sense and learn: recent advances in wearable sensing and machine learning for blood glucose monitoring and trend-detection},
+@article{alhaddad_diabetes_2022,
+	title = {Diabetes mellitus is characterized by elevated blood glucose levels, however patients with diabetes may also develop hypoglycemia due to treatment. There is an increasing demand for non-invasive blood glucose monitoring and trends detection amongst people with diabetes and healthy individuals, especially athletes. Wearable devices and non-invasive sensors for blood glucose monitoring have witnessed considerable advances. This review is an update on recent contributions utilizing novel sensing technologies over the past five years which include electrocardiogram, electromagnetic, bioimpedance, photoplethysmography, and acceleration measures as well as bodily fluid glucose sensors to monitor glucose and trend detection. We also review methods that use machine learning algorithms to predict blood glucose trends, especially for high risk events such as hypoglycemia. Convolutional and recurrent neural networks, support vector machines, and decision trees are examples of such machine learning algorithms. Finally, we address the key limitations and challenges of these studies and provide recommendations for future work.},
 	volume = {10},
 	pages = {876672},
 	journaltitle = {Frontiers in Bioengineering and Biotechnology},
@@ -23,6 +24,13 @@
 @article{gad_cardiovascular_2023,
 	title = {Cardiovascular autonomic neuropathy is associated with increased glycemic variability driven by hyperglycemia rather than hypoglycemia in patients with diabetes},
 	volume = {200},
+	abstract = {Aim: Cardiac autonomic neuropathy ({CAN}) has been suggested to be associated with hypoglycemia and impaired hypoglycemia unawareness. We have assessed the relationship between {CAN} and extensive measures of glucose variability ({GV}) in patients with type 1 and type 2 diabetes.
+	
+	Methods: Participants with diabetes underwent continuous glucose monitoring ({CGM}) to obtain measures of {GV} and the extent of hyperglycemia and hypoglycemia and cardiovascular autonomic reflex testing.
+	
+	Results: Of the 40 participants (20 T1DM and 20 T2DM) (aged 40.70 ± 13.73 years, diabetes duration 14.43 ± 7.35 years, {HbA}1c 8.85 ± 1.70\%), 23 (57.5\%) had {CAN}. Despite a lower coefficient of variation ({CV}) (31.26 ± 11.87 vs. 40.33 ± 11.03, P = 0.018), they had a higher {CONGA} (8.42 ± 2.58 vs. 6.68 ± 1.88, P = 0.024) with a lower median {LBGI} (1.60 (range: 0.20-3.50) vs. 4.90 (range: 3.20-7.40), P = 0.010) and percentage median time spent in hypoglycemia (4 (range:4-13) vs. 1 (range:0-5), P = 0.008), compared to those without {CAN}. The percentage {GRADEEuglycemia} (3.30 ± 2.78 vs. 5.69 ± 3.09, P = 0.017) and {GRADEHypoglycemia} (0.3 (range: 0 - 3.80) vs. 1.8 (range: 0.9-6.5), P = 0.036) were significantly lower, while the percentage median {GRADEHyperglycemia} (95.45 (range:93-98) vs. 91.6 (82.8-95.1), P = 0.013) was significantly higher in participants with {CAN} compared to those without {CAN}.
+
+Conclusion: {CAN} was associated with increased glycemic variability with less time in euglycemia attributed to a greater time in hyperglycemia but not hypoglycemia.},
 	pages = {110670},
 	journaltitle = {Diabetes Research and Clinical Practice},
 	author = {Gad, Hoda and Elgassim, Einas and Mohammed, Ibrahim and Alhaddad, Ahmad Yaser and Aly, Hussein Ahmed Hussein Zaky and Cabibihan, John-John and Al-Ali, Abdulaziz and Sadasivuni, Kishor Kumar and Petropoulos, Ioannis N and Ponirakis, Georgios and {others}},
@@ -33,6 +41,7 @@
 @article{alhaddad_longitudinal_2023,
 	title = {Longitudinal Studies of Wearables in Patients with Diabetes: Key Issues and Solutions},
 	volume = {23},
+	abstract = {Glucose monitoring is key to the management of diabetes mellitus to maintain optimal glucose control whilst avoiding hypoglycemia. Non-invasive continuous glucose monitoring techniques have evolved considerably to replace finger prick testing, but still require sensor insertion. Physiological variables, such as heart rate and pulse pressure, change with blood glucose, especially during hypoglycemia, and could be used to predict hypoglycemia. To validate this approach, clinical studies that contemporaneously acquire physiological and continuous glucose variables are required. In this work, we provide insights from a clinical study undertaken to study the relationship between physiological variables obtained from a number of wearables and glucose levels. The clinical study included three screening tests to assess neuropathy and acquired data using wearable devices from 60 participants for four days. We highlight the challenges and provide recommendations to mitigate issues that may impact the validity of data capture to enable a valid interpretation of the outcomes.},
 	pages = {5003},
 	number = {11},
 	journaltitle = {Sensors},
@@ -44,6 +53,13 @@
 @article{gad_continuous_2022,
 	title = {Continuous glucose monitoring reveals a novel association between duration and severity of hypoglycemia, and small nerve fiber injury in patients with diabetes},
 	volume = {11},
+	abstract = {Objective: Continuous glucose monitoring ({CGM}) has revealed that glycemic variability and low time in range are associated with albuminuria and retinopathy. We have investigated the relationship between glucose metrics derived from {CGM} and a highly sensitive measure of neuropathy using corneal confocal microscopy in participants with type 1 and type 2 diabetes.
+	
+	Methods: A total of 40 participants with diabetes and 28 healthy controls underwent quantification of corneal nerve fiber density ({CNFD}), corneal nerve branch density ({CNBD}), corneal nerve fiber length ({CNFL}) and inferior whorl length ({IWL}) and those with diabetes underwent {CGM} for four consecutive days.
+	
+	Results: {CNBD} was significantly lower in patients with high glycemic variability ({GV}) compared to low {GV} (median (range) (25.0 (19.0-37.5) vs 38.6 (29.2-46.9); P = 0.007); in patients who spent {\textgreater}4\% compared to {\textless}4\% time in level 1 hypoglycemia (54-69 mg/{dL}) (25.0 (22.9-37.5) vs 37.5 (29.2-46.9); P = 0.045) and in patients who spent {\textgreater}1\% compared to {\textless}1\% time in level 2 hypoglycemia ({\textless}54 mg/{dL}) (25.0 (19.8-41.7) vs 35.4 (28.1-44.8); P = 0.04). Duration in level 1 hypoglycemia correlated with {CNBD} (r = -0.342, P = 0.031). Duration in level 1 (181-250 mg/{dL}) and level 2 ({\textgreater}250 mg/{dL}) hyperglycemia did not correlate with {CNFD} (P {\textgreater} 0.05), {CNBD} (P {\textgreater} 0.05), {CNFL} (P {\textgreater} 0.05) or {IWL} (P {\textgreater} 0.05).
+
+Conclusions: Greater {GV} and duration in hypoglycemia, rather than hyperglycemia, are associated with nerve fiber loss in diabetes.},
 	number = {12},
 	journaltitle = {Endocrine connections},
 	author = {Gad, Hoda and Elgassim, Einas and Mohammed, Ibrahim and Alhaddad, Ahmad Yaser and Aly, Hussein Ahmed Hussein Zaky and Cabibihan, John-John and Al-Ali, Abdulaziz and Sadasivuni, Kishor Kumar and Haji, Aliyaa and Lamine, Neila and {others}},
@@ -53,6 +69,7 @@
 
 @article{aly_pulseoblivion_2023,
 	title = {{PulseOblivion}: An Effective Session-Based Continuous Authentication Scheme Using {PPG} Signals},
+	abstract = {In this paper, we propose a novel session-based continuous authentication model using photoplethysmography ({PPG}). Unlike previous {PPG}-based authentication techniques that generate user signatures only during the initial interaction, our session-based approach tackles inter session {PPG} drifting by generating a user signature at the start of each session. Our model is composed by two modules: Firstly, heavy deep autoencoders ({AE}) are utilized for feature extraction and, secondly, a lightweight Local Outlier Factor ({LOF}) is employed for user authentication.Additionally, we introduce a continuous updating system for the {LOF} model, which automatically recovers from security breaches and can enhance authentication accuracy by more than 9\%. Our experiments show that in a single-session scenario, our model achieves authentication accuracies of 93.5\% and 91.8\% on the {CapnoBase} and {BIMDC} benchmarking datasets, respectively, outperforming the state-of-the-art baseline model by 3.2\% and 1.6\% on both datasets, respectively. In multiple-session scenarios, our scheme attains an authentication accuracy of 95\% when tested on the {BioSec}2 dataset, effectively mitigating inter-session {PPG} drifting and achieving an advantage of more than 8.5\% in authentication accuracy over the state-of-the-art method. In terms of execution speed, our solution is seven times faster at runtime compared to competing state-of-the-art solutions.},
 	journaltitle = {{IEEE} Access},
 	author = {Aly, Hussein A and Di Pietro, Roberto},
 	date = {2023},
@@ -61,6 +78,7 @@
 
 @article{aly_blackbox_2023,
 	title = {A Blackbox Model Is All You Need to Breach Privacy: Smart Grid Forecasting Models as a Use Case},
+	abstract = {This paper investigates the potential privacy risks associated with forecasting models, with specific emphasis on their application in the context of smart grids. While machine learning and deep learning algorithms offer valuable utility, concerns arise regarding their exposure of sensitive information. Previous studies have focused on classification models, overlooking risks associated with forecasting models. Deep learning based forecasting models, such as Long Short Term Memory ({LSTM}), play a crucial role in several applications including optimizing smart grid systems but also introduce privacy risks. Our study analyzes the ability of forecasting models to leak global properties and privacy threats in smart grid systems. We demonstrate that a black box access to an {LSTM} model can reveal a significant amount of information equivalent to having access to the data itself (with the difference being as low as 1\% in Area Under the {ROC} Curve). This highlights the importance of protecting forecasting models at the same level as the data.},
 	journaltitle = {{arXiv} preprint {arXiv}:2309.01523},
 	author = {Aly, Hussein and Al-Ali, Abdulaziz and Al-Ali, Abdullah and Malluhi, Qutaibah},
 	date = {2023},
