--- a/publications.bib
+++ b/publications.bib
@@ -11,9 +11,10 @@
 	note = {Publisher: Springer},
 }
 
-@article{alhaddad_diabetes_2022,
-	title = {Diabetes mellitus is characterized by elevated blood glucose levels, however patients with diabetes may also develop hypoglycemia due to treatment. There is an increasing demand for non-invasive blood glucose monitoring and trends detection amongst people with diabetes and healthy individuals, especially athletes. Wearable devices and non-invasive sensors for blood glucose monitoring have witnessed considerable advances. This review is an update on recent contributions utilizing novel sensing technologies over the past five years which include electrocardiogram, electromagnetic, bioimpedance, photoplethysmography, and acceleration measures as well as bodily fluid glucose sensors to monitor glucose and trend detection. We also review methods that use machine learning algorithms to predict blood glucose trends, especially for high risk events such as hypoglycemia. Convolutional and recurrent neural networks, support vector machines, and decision trees are examples of such machine learning algorithms. Finally, we address the key limitations and challenges of these studies and provide recommendations for future work.},
+@article{alhaddad_sense_2022,
+	title = {Sense and Learn: Recent Advances in Wearable Sensing and Machine Learning for Blood Glucose Monitoring and Trend-Detection},
 	volume = {10},
+	abstract = {Diabetes mellitus is characterized by elevated blood glucose levels, however patients with diabetes may also develop hypoglycemia due to treatment. There is an increasing demand for non-invasive blood glucose monitoring and trends detection amongst people with diabetes and healthy individuals, especially athletes. Wearable devices and non-invasive sensors for blood glucose monitoring have witnessed considerable advances. This review is an update on recent contributions utilizing novel sensing technologies over the past five years which include electrocardiogram, electromagnetic, bioimpedance, photoplethysmography, and acceleration measures as well as bodily fluid glucose sensors to monitor glucose and trend detection. We also review methods that use machine learning algorithms to predict blood glucose trends, especially for high risk events such as hypoglycemia. Convolutional and recurrent neural networks, support vector machines, and decision trees are examples of such machine learning algorithms. Finally, we address the key limitations and challenges of these studies and provide recommendations for future work.},
 	pages = {876672},
 	journaltitle = {Frontiers in Bioengineering and Biotechnology},
 	author = {Alhaddad, Ahmad Yaser and Aly, Hussein and Gad, Hoda and Al-Ali, Abdulaziz and Sadasivuni, Kishor Kumar and Cabibihan, John-John and Malik, Rayaz A},
@@ -25,10 +26,10 @@
 	title = {Cardiovascular autonomic neuropathy is associated with increased glycemic variability driven by hyperglycemia rather than hypoglycemia in patients with diabetes},
 	volume = {200},
 	abstract = {Aim: Cardiac autonomic neuropathy ({CAN}) has been suggested to be associated with hypoglycemia and impaired hypoglycemia unawareness. We have assessed the relationship between {CAN} and extensive measures of glucose variability ({GV}) in patients with type 1 and type 2 diabetes.
-	
-	Methods: Participants with diabetes underwent continuous glucose monitoring ({CGM}) to obtain measures of {GV} and the extent of hyperglycemia and hypoglycemia and cardiovascular autonomic reflex testing.
-	
-	Results: Of the 40 participants (20 T1DM and 20 T2DM) (aged 40.70 ± 13.73 years, diabetes duration 14.43 ± 7.35 years, {HbA}1c 8.85 ± 1.70\%), 23 (57.5\%) had {CAN}. Despite a lower coefficient of variation ({CV}) (31.26 ± 11.87 vs. 40.33 ± 11.03, P = 0.018), they had a higher {CONGA} (8.42 ± 2.58 vs. 6.68 ± 1.88, P = 0.024) with a lower median {LBGI} (1.60 (range: 0.20-3.50) vs. 4.90 (range: 3.20-7.40), P = 0.010) and percentage median time spent in hypoglycemia (4 (range:4-13) vs. 1 (range:0-5), P = 0.008), compared to those without {CAN}. The percentage {GRADEEuglycemia} (3.30 ± 2.78 vs. 5.69 ± 3.09, P = 0.017) and {GRADEHypoglycemia} (0.3 (range: 0 - 3.80) vs. 1.8 (range: 0.9-6.5), P = 0.036) were significantly lower, while the percentage median {GRADEHyperglycemia} (95.45 (range:93-98) vs. 91.6 (82.8-95.1), P = 0.013) was significantly higher in participants with {CAN} compared to those without {CAN}.
+
+Methods: Participants with diabetes underwent continuous glucose monitoring ({CGM}) to obtain measures of {GV} and the extent of hyperglycemia and hypoglycemia and cardiovascular autonomic reflex testing.
+
+Results: Of the 40 participants (20 T1DM and 20 T2DM) (aged 40.70 ± 13.73 years, diabetes duration 14.43 ± 7.35 years, {HbA}1c 8.85 ± 1.70\%), 23 (57.5\%) had {CAN}. Despite a lower coefficient of variation ({CV}) (31.26 ± 11.87 vs. 40.33 ± 11.03, P = 0.018), they had a higher {CONGA} (8.42 ± 2.58 vs. 6.68 ± 1.88, P = 0.024) with a lower median {LBGI} (1.60 (range: 0.20-3.50) vs. 4.90 (range: 3.20-7.40), P = 0.010) and percentage median time spent in hypoglycemia (4 (range:4-13) vs. 1 (range:0-5), P = 0.008), compared to those without {CAN}. The percentage {GRADEEuglycemia} (3.30 ± 2.78 vs. 5.69 ± 3.09, P = 0.017) and {GRADEHypoglycemia} (0.3 (range: 0 - 3.80) vs. 1.8 (range: 0.9-6.5), P = 0.036) were significantly lower, while the percentage median {GRADEHyperglycemia} (95.45 (range:93-98) vs. 91.6 (82.8-95.1), P = 0.013) was significantly higher in participants with {CAN} compared to those without {CAN}.
 
 Conclusion: {CAN} was associated with increased glycemic variability with less time in euglycemia attributed to a greater time in hyperglycemia but not hypoglycemia.},
 	pages = {110670},
@@ -54,10 +55,10 @@ Conclusion: {CAN} was associated with increased glycemic variability with less t
 	title = {Continuous glucose monitoring reveals a novel association between duration and severity of hypoglycemia, and small nerve fiber injury in patients with diabetes},
 	volume = {11},
 	abstract = {Objective: Continuous glucose monitoring ({CGM}) has revealed that glycemic variability and low time in range are associated with albuminuria and retinopathy. We have investigated the relationship between glucose metrics derived from {CGM} and a highly sensitive measure of neuropathy using corneal confocal microscopy in participants with type 1 and type 2 diabetes.
-	
-	Methods: A total of 40 participants with diabetes and 28 healthy controls underwent quantification of corneal nerve fiber density ({CNFD}), corneal nerve branch density ({CNBD}), corneal nerve fiber length ({CNFL}) and inferior whorl length ({IWL}) and those with diabetes underwent {CGM} for four consecutive days.
-	
-	Results: {CNBD} was significantly lower in patients with high glycemic variability ({GV}) compared to low {GV} (median (range) (25.0 (19.0-37.5) vs 38.6 (29.2-46.9); P = 0.007); in patients who spent {\textgreater}4\% compared to {\textless}4\% time in level 1 hypoglycemia (54-69 mg/{dL}) (25.0 (22.9-37.5) vs 37.5 (29.2-46.9); P = 0.045) and in patients who spent {\textgreater}1\% compared to {\textless}1\% time in level 2 hypoglycemia ({\textless}54 mg/{dL}) (25.0 (19.8-41.7) vs 35.4 (28.1-44.8); P = 0.04). Duration in level 1 hypoglycemia correlated with {CNBD} (r = -0.342, P = 0.031). Duration in level 1 (181-250 mg/{dL}) and level 2 ({\textgreater}250 mg/{dL}) hyperglycemia did not correlate with {CNFD} (P {\textgreater} 0.05), {CNBD} (P {\textgreater} 0.05), {CNFL} (P {\textgreater} 0.05) or {IWL} (P {\textgreater} 0.05).
+
+Methods: A total of 40 participants with diabetes and 28 healthy controls underwent quantification of corneal nerve fiber density ({CNFD}), corneal nerve branch density ({CNBD}), corneal nerve fiber length ({CNFL}) and inferior whorl length ({IWL}) and those with diabetes underwent {CGM} for four consecutive days.
+
+Results: {CNBD} was significantly lower in patients with high glycemic variability ({GV}) compared to low {GV} (median (range) (25.0 (19.0-37.5) vs 38.6 (29.2-46.9); P = 0.007); in patients who spent {\textgreater}4\% compared to {\textless}4\% time in level 1 hypoglycemia (54-69 mg/{dL}) (25.0 (22.9-37.5) vs 37.5 (29.2-46.9); P = 0.045) and in patients who spent {\textgreater}1\% compared to {\textless}1\% time in level 2 hypoglycemia ({\textless}54 mg/{dL}) (25.0 (19.8-41.7) vs 35.4 (28.1-44.8); P = 0.04). Duration in level 1 hypoglycemia correlated with {CNBD} (r = -0.342, P = 0.031). Duration in level 1 (181-250 mg/{dL}) and level 2 ({\textgreater}250 mg/{dL}) hyperglycemia did not correlate with {CNFD} (P {\textgreater} 0.05), {CNBD} (P {\textgreater} 0.05), {CNFL} (P {\textgreater} 0.05) or {IWL} (P {\textgreater} 0.05).
 
 Conclusions: Greater {GV} and duration in hypoglycemia, rather than hyperglycemia, are associated with nerve fiber loss in diabetes.},
 	number = {12},
